added forms and some front end capability

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,5 +6,26 @@
 <body>
 <h1>{{  title  }} Page</h1>
 {% block body_content %}{% endblock %}
+{% extends "layout.html" %}
+{% block body_content %}
+    <div class='form'>
+        <form method='POST' action=''>
+            {{ form.hidden_tag() }}
+            {{ form.first_name.label }}
+            {{ form.first_name }}
+            <br>
+            {{ form.last_name.label }}
+            {{ form.last_name }}
+            <br>
+            {{ form.title.label }}
+            {{ form.title }}
+            <br>
+            {{ form.content.label }}
+            {{ form.content }}
+            <br>
+            {{ form.submit }}
+        </form>
+    </div>
+{% endblock %}
 </body>
 </html>
