--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -9,4 +9,6 @@
 	    <p>{{ post.first_name }}</p>
 	    <p>{{ post.last_name }}</p>
 	    <p>{{ post.content }}</p>
+	</div>
+	<div><a href="{{ url_for('post') }}">Post</a></div>
 {% endblock body_content %} 
