added for and submit button

--- a/application/templates/about.html
+++ b/application/templates/about.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<% block body_content %}{% endblock %}
 <h1>{{ about }}</h1>
 
 <div><a href="{{ url_for('post') }}">Post</a></div>
