--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %}
-{% block body_content %}
+{% extends 'layout.html' %}
+{% block body_content %}{% endblock %}
     <h1>Home Page</h1>
     <p>Welcome to this web app!</p>
         <div>
@@ -11,4 +11,3 @@
 	    <p>{{ post.content }}</p>
 	</div>
 	<div><a href="{{ url_for('post') }}">Post</a></div>
-{% endblock body_content %} 
